packages/beff-core/tests/snapshots/print_parser__tests__ok_repro7.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_types(r#\"\n        const x = (it: string) => it;\n        export const ABC = {a: `b`, c: `d${x(\"d\")}d`} as const satisfies Record<string, string>;\n        export type AllTs = (keyof typeof ABC);\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
type AllTs = ("a" | "c");


type BuiltParsers = {
  AllTs: AllTs,
}
