packages/beff-core/tests/snapshots/print_parser__tests__ok_repro8.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        const x = (it: string) => it;\n        const def = \"def\";\n        export const ABC = {a: `b`, c: `d${x(\"d\")}d`, def ,} as const satisfies Record<string, string>;\n        export type AllTs = (keyof typeof ABC);\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
type AllTs = "a" | "c" | "def";
type AllTs = AllTs;
