packages/beff-core/tests/snapshots/print_parser__tests__ok_repro9.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        export const ABC = {a: x=>x+1, } as const satisfies Record<string, string>;\n        export type AllTs = (keyof typeof ABC);\n\n        parse.buildParsers<{ AllTs: AllTs }>();\n      \"#)"
---
type AllTs = "a";

type AllTs = AllTs;
