packages/beff-core/tests/snapshots/print_parser__tests__ok_repro_3.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n      \n        export interface IY {\n            a: string\n        }\n        export interface IX {\n            sizes?: IY;\n        }\n        // type IX2 = Required<IX>\n        type T3 = IX[keyof IX]\n        parse.buildParsers<{ T3: T3 }>();\n      \"#)"
---
type IX = { "sizes"?: IY };
type IY = { "a": string };
type T3 = null | { "a": string };
type T3 = T3;
