packages/beff-core/tests/snapshots/print_parser__tests__ok_required.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n\n        type MaybeUser = {\n            name?: string,\n            age?: number,\n        }\n        parse.buildParsers<{ A: Required<MaybeUser> }>();\n      \"#)"
---
type MaybeUser = { "age"?: number; "name"?: string };
type A = { "age": number; "name": string };

