packages/beff-core/tests/snapshots/print_parser__tests__ok_string_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type Alias = string;\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
const namedParsers = {
    "Alias": new ParserTypeOfImpl("string")
};
const buildValidatorsInput = {
    "Dec": new ParserRefImpl("Alias")
};
