packages/beff-core/tests/snapshots/print_parser__tests__ok_string_with_fmt_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_cgen(r#\"\n        export type Alias = StringFormat<\"password\">;\n        parse.buildParsers<{ Dec: Alias }>();\n      \"#)"
---
const direct_hoist_0 = new RefRuntype("Alias");
const direct_hoist_1 = new StringWithFormatRuntype([
    "password"
]);
const namedRuntypes = {
    "Alias": direct_hoist_1
};
const buildParsersInput = {
    "Dec": direct_hoist_0
};
