packages/beff-core/tests/snapshots/print_parser__tests__ok_string_with_fmt_extends_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "decoder(r#\"\n        export type User = StringFormat<\"User\">;\n        export type ReadAuthorizedUser = StringFormatExtends<User, \"ReadAuthorizedUser\">;\n        export type WriteAuthorizedUser = StringFormatExtends<ReadAuthorizedUser, \"WriteAuthorizedUser\">;\n        parse.buildParsers<{ User: User, ReadAuthorizedUser: ReadAuthorizedUser, WriteAuthorizedUser: WriteAuthorizedUser }>();\n      \"#)"
---
const namedParsers = {
    "User": new ParserStringWithFormatImpl([
        "User"
    ]),
    "ReadAuthorizedUser": new ParserStringWithFormatImpl([
        "User",
        "ReadAuthorizedUser"
    ]),
    "WriteAuthorizedUser": new ParserStringWithFormatImpl([
        "User",
        "ReadAuthorizedUser",
        "WriteAuthorizedUser"
    ])
};
const buildValidatorsInput = {
    "User": new ParserRefImpl("User"),
    "ReadAuthorizedUser": new ParserRefImpl("ReadAuthorizedUser"),
    "WriteAuthorizedUser": new ParserRefImpl("WriteAuthorizedUser")
};
