packages/beff-core/tests/snapshots/print_parser__tests__ok_string_with_fmt_record_decoder.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "print_cgen(r#\"\n        export type Password = StringFormat<\"password\">;\n        export type PassLenghts = Record<Password, number>;\n        parse.buildParsers<{ PassLenghts: PassLenghts }>();\n      \"#)"
---
const direct_hoist_0 = new StringWithFormatRuntype([
    "password"
]);
const namedRuntypes = {
    "PassLenghts": new ObjectRuntype({}, [
        {
            "key": direct_hoist_0,
            "value": new TypeofRuntype("number")
        }
    ]),
    "Password": direct_hoist_0
};
const buildParsersInput = {
    "PassLenghts": new RefRuntype("PassLenghts")
};
