packages/beff-core/tests/snapshots/print_parser__tests__ok_tpl_lit2.snap
---
source: packages/beff-core/tests/print_parser.rs
expression: "ok(r#\"\n        enum Abc {\n            A = \"A\",\n            B = \"B\",\n        }\n        export type IX = `${Abc}`\n        parse.buildParsers<{ IX: IX }>();\n      \"#)"
---
type Abc = ("A" | "B");

type IX = `("A" | "B")`;

type IX = IX;
